fixed aspect ratio of trending icons was stretched

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -159,7 +159,7 @@
                         padding: 1rem;
                         .trend-icon{
                             margin-right: 1rem;
-                            height: auto;
+                            height: 50px;
                         }
                         .trend-tag{
                             font-weight: bolder;
